--- a/.openshiftio/application.yaml
+++ b/.openshiftio/application.yaml
@@ -6,6 +6,13 @@ metadata:
     description: This template creates a Vert.x application using a config map as configuration source.
     tags: instant-app
 parameters:
+- name: SUFFIX_NAME
+  description: The suffix name for the template objects
+  displayName: Suffix name
+  value: ''
+- name: RELEASE_VERSION
+  description: The release version number of application
+  displayName: Release version
 - name: SOURCE_REPOSITORY_URL
   description: The source URL for the application
   displayName: Source URL
@@ -28,38 +35,27 @@ parameters:
   generate: expression
 
 objects:
-- apiVersion: v1
+- apiVersion: image.openshift.io/v1
   kind: ImageStream
   metadata:
-    name: configmap-vertx
+    name: configmap-vertx${SUFFIX_NAME}
     labels:
       booster: configmap-vertx
+      version: ${RELEASE_VERSION}
   spec: {}
-
-- apiVersion: v1
-  kind: ImageStream
-  metadata:
-    name: runtime-configmap-vertx
-    labels:
-      booster: configmap-vertx
-  spec:
-    tags:
-    - name: latest
-      from:
-        kind: DockerImage
-        name: registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift
 
 - apiVersion: v1
   kind: BuildConfig
   metadata:
-    name: configmap-vertx
+    name: configmap-vertx-s2i${SUFFIX_NAME}
     labels:
       booster: configmap-vertx
+      version: ${RELEASE_VERSION}
   spec:
     output:
       to:
         kind: ImageStreamTag
-        name: configmap-vertx:latest
+        name: 'configmap-vertx${SUFFIX_NAME}:${RELEASE_VERSION}'
     source:
       git:
         uri: ${SOURCE_REPOSITORY_URL}
@@ -69,8 +65,8 @@ objects:
     strategy:
       sourceStrategy:
         from:
-          kind: ImageStreamTag
-          name: runtime-configmap-vertx:latest
+          kind: DockerImage
+          name: registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift
         incremental: true
         env:
         - name: MAVEN_ARGS_APPEND
@@ -83,8 +79,6 @@ objects:
         secret: ${GITHUB_WEBHOOK_SECRET}
       type: GitHub
     - type: ConfigChange
-    - imageChange: {}
-      type: ImageChange
 
 - apiVersion: v1
   kind: Service
@@ -95,7 +89,9 @@ objects:
     labels:
       app: configmap-vertx
       group: io.openshift.booster
-    name: configmap-vertx
+      version: ${RELEASE_VERSION}
+      expose: 'true'
+    name: configmap-vertx${SUFFIX_NAME}
   spec:
     ports:
     - name: http
@@ -112,7 +108,8 @@ objects:
     labels:
       app: configmap-vertx
       group: io.openshift.booster
-    name: configmap-vertx
+      version: ${RELEASE_VERSION}
+    name: configmap-vertx${SUFFIX_NAME}
   spec:
     replicas: 1
     selector:
@@ -123,6 +120,7 @@ objects:
         labels:
           app: configmap-vertx
           group: io.openshift.booster
+          version: ${RELEASE_VERSION}
       spec:
         containers:
         - env:
@@ -132,7 +130,7 @@ objects:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          image: configmap-vertx:latest
+          image: ""
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
@@ -179,7 +177,7 @@ objects:
           - vertx
         from:
           kind: ImageStreamTag
-          name: configmap-vertx:latest
+          name: 'configmap-vertx${SUFFIX_NAME}:${RELEASE_VERSION}'
 
 - apiVersion: route.openshift.io/v1
   kind: Route
@@ -187,10 +185,11 @@ objects:
     labels:
       app: configmap-vertx
       group: io.openshift.booster
-    name: configmap-vertx
+      version: ${RELEASE_VERSION}
+    name: configmap-vertx${SUFFIX_NAME}
   spec:
     port:
       targetPort: 8080
     to:
       kind: Service
-      name: configmap-vertx
+      name: configmap-vertx${SUFFIX_NAME}
